--- a/src/index.html
+++ b/src/index.html
@@ -5,12 +5,139 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" type="text/css" />
+    <link rel="stylesheet" href="./styles.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
+    />
+
     <script type="module" src="main.js"></script>
   </head>
   <body>
-    <h1>lol</h1>
-    
-    </script>
+    <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
+      <div class="container">
+        <a class="navbar-brand" href="#">FireApp</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item">
+              <a
+                class="nav-link"
+                href="#"
+                data-bs-toggle="modal"
+                data-bs-target="#signin-modal"
+                >SignIn</a
+              >
+            </li>
+            <li class="nav-item">
+              <a
+                class="nav-link"
+                href="#"
+                data-bs-toggle="modal"
+                data-bs-target="#signup-modal"
+                >SignUp</a
+              >
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <!--SignIn Modal -->
+    <div
+      class="modal fade"
+      id="signin-modal"
+      tabindex="-1"
+      aria-labelledby="exampleModalLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog">
+        <div class="modal-content bg-dark">
+          <div class="modal-header">
+            <h1 class="modal-title fs-5" id="exampleModalLabel">SignIn</h1>
+            <button
+              type="button"
+              class="btn-close btn-close-white"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
+          </div>
+          <div class="modal-body">
+            <form action="" id="signin-form">
+              <label for="email">Email</label>
+              <input
+                type="email"
+                class="form-control"
+                mb-3
+                placeholder="email"
+                required
+              />
+              <label for="password">Password</label>
+              <input
+                type="password"
+                class="form-control"
+                mb-3
+                placeholder="password"
+                required
+              />
+              <button class="btn btn-primary" type="submit">Login</button>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!--SignUp Modal -->
+    <div
+      class="modal fade"
+      id="signup-modal"
+      tabindex="-1"
+      aria-labelledby="exampleModalLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog">
+        <div class="modal-content bg-dark">
+          <div class="modal-header">
+            <h1 class="modal-title fs-5" id="exampleModalLabel">SignUp</h1>
+            <button
+              type="button"
+              class="btn-close btn-close-white"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
+          </div>
+          <div class="modal-body">
+            <form action="" id="signup-form">
+              <label for="email">Email</label>
+              <input
+                type="email"
+                class="form-control"
+                mb-3
+                placeholder="email"
+                required
+              />
+              <label for="password">Password</label>
+              <input
+                type="password"
+                class="form-control"
+                mb-3
+                placeholder="password"
+                required
+              />
+              <button class="btn btn-primary" ype="submit">Register</button>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
