--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="./styles.css" />
+    <!-- Bootstrap -->
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
+    />
+    <!-- Toastify -->
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css"
     />
 
     <script type="module" src="main.js"></script>
@@ -30,7 +37,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
-            <li class="nav-item">
+            <li class="nav-item logged-out">
               <a
                 class="nav-link"
                 href="#"
@@ -39,7 +46,7 @@
                 >SignIn</a
               >
             </li>
-            <li class="nav-item">
+            <li class="nav-item logged-out">
               <a
                 class="nav-link"
                 href="#"
@@ -47,6 +54,9 @@
                 data-bs-target="#signup-modal"
                 >SignUp</a
               >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link logged-in" href="#" id="logout">LogOut</a>
             </li>
           </ul>
         </div>
@@ -63,7 +73,9 @@
       <div class="modal-dialog">
         <div class="modal-content bg-dark">
           <div class="modal-header">
-            <h1 class="modal-title fs-5" id="exampleModalLabel">SignIn</h1>
+            <h1 class="modal-title fs-5 label-color" id="exampleModalLabel">
+              SignIn
+            </h1>
             <button
               type="button"
               class="btn-close btn-close-white"
@@ -73,21 +85,23 @@
           </div>
           <div class="modal-body">
             <form action="" id="signin-form">
-              <label for="email">Email</label>
+              <label for="email" class="label-color">Email</label>
               <input
                 type="email"
                 class="form-control"
                 mb-3
                 placeholder="email"
                 required
+                id="login-email"
               />
-              <label for="password">Password</label>
+              <label for="password" class="label-color">Password</label>
               <input
                 type="password"
                 class="form-control"
                 mb-3
                 placeholder="password"
                 required
+                id="login-password"
               />
               <button class="btn btn-primary" type="submit">Login</button>
             </form>
@@ -106,7 +120,9 @@
       <div class="modal-dialog">
         <div class="modal-content bg-dark">
           <div class="modal-header">
-            <h1 class="modal-title fs-5" id="exampleModalLabel">SignUp</h1>
+            <h1 class="modal-title fs-5 label-color" id="exampleModalLabel">
+              SignUp
+            </h1>
             <button
               type="button"
               class="btn-close btn-close-white"
@@ -116,21 +132,23 @@
           </div>
           <div class="modal-body">
             <form action="" id="signup-form">
-              <label for="email">Email</label>
+              <label for="email" class="label-color">Email</label>
               <input
                 type="email"
                 class="form-control"
                 mb-3
                 placeholder="email"
                 required
+                id="signup-email"
               />
-              <label for="password">Password</label>
+              <label for="password" class="label-color">Password</label>
               <input
                 type="password"
                 class="form-control"
                 mb-3
                 placeholder="password"
                 required
+                id="signup-password"
               />
               <button class="btn btn-primary" ype="submit">Register</button>
             </form>
@@ -138,6 +156,12 @@
         </div>
       </div>
     </div>
+    <!-- Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Toastify -->
+    <script
+      type="text/javascript"
+      src="https://cdn.jsdelivr.net/npm/toastify-js"
+    ></script>
   </body>
 </html>
