--- a/src/index.html
+++ b/src/index.html
@@ -103,9 +103,27 @@
                 required
                 id="login-password"
               />
-              <button class="btn btn-primary" type="submit">Login</button>
+              <button class="btn btn-primary w-100 mb-4 mt-4" type="submit">
+                Login
+              </button>
             </form>
+            <button type="button" id="google-login" class="btn btn-info">
+              Google
+            </button>
+            <button type="button" id="facebook-login" class="btn btn-primary">
+              Facebook
+            </button>
+            <button type="button" id="github-login" class="btn btn-light">
+              GitHub
+            </button>
           </div>
+        </div>
+      </div>
+    </div>
+    <div class="container p-4">
+      <div class="row">
+        <div class="col-md-6 offset-md-3">
+          <ul class="list-group posts"></ul>
         </div>
       </div>
     </div>
@@ -150,7 +168,9 @@
                 required
                 id="signup-password"
               />
-              <button class="btn btn-primary" ype="submit">Register</button>
+              <button class="btn btn-primary w-100 mb-4 mt-4" type="submit">
+                Register
+              </button>
             </form>
           </div>
         </div>
